details - validations in controllers