@@ -9,14 +9,16 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.server.ResponseStatusException;
 
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/doctors")
@@ -32,17 +34,18 @@ public class DoctorController {
     @Operation(summary = "Get all doctors", description = "Retrieves a list of all registered doctors.")
     @ApiResponses({
         @ApiResponse(responseCode = "200", description = "List of doctors retrieved successfully", 
-                     content = @Content(mediaType = "application/json", schema = @Schema(implementation = DoctorDTO.class)))
+                     content = @Content(mediaType = "application/json", schema = @Schema(implementation = DoctorDTO.class))),
+        @ApiResponse(responseCode = "204", description = "No doctors found")
     })
     @GetMapping
     public ResponseEntity<List<DoctorDTO>> getAllDoctors() {
         List<DoctorDTO> doctors = doctorService.getAllDoctors()
                 .stream()
                 .map(DoctorDTO::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
 
         return doctors.isEmpty()
-                ? ResponseEntity.status(HttpStatus.NO_CONTENT).build()
+                ? ResponseEntity.noContent().build()
                 : ResponseEntity.ok(doctors);
     }
 
@@ -50,23 +53,23 @@ public class DoctorController {
     @ApiResponses({
         @ApiResponse(responseCode = "200", description = "Doctor retrieved successfully", 
                      content = @Content(mediaType = "application/json", schema = @Schema(implementation = DoctorDTO.class))),
-        @ApiResponse(responseCode = "404", description = "Doctor not found", content = @Content(mediaType = "application/json"))
+        @ApiResponse(responseCode = "404", description = "Doctor not found")
     })
     @GetMapping("/{id}")
     public ResponseEntity<?> getDoctorById(@PathVariable Long id) {
         try {
             Doctor doctor = doctorService.getDoctorById(id);
             return ResponseEntity.ok(DoctorDTO.fromEntity(doctor));
-        } catch (ResponseStatusException ex) {
+        } catch (EntityNotFoundException e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body("Error: Doctor with ID " + id + " not found.");
         }
-    }
+    }    
 
     @Operation(summary = "Create a new doctor", description = "Registers a new doctor with the given details.")
     @ApiResponses({
         @ApiResponse(responseCode = "201", description = "Doctor created successfully", 
-                     content = @Content(mediaType = "application/json", schema = @Schema(implementation = DoctorDTO.class))),
+                    content = @Content(mediaType = "application/json", schema = @Schema(implementation = DoctorDTO.class))),
         @ApiResponse(responseCode = "400", description = "Invalid request data", content = @Content)
     })
     @PostMapping
@@ -74,9 +77,12 @@ public class DoctorController {
         try {
             Doctor doctor = doctorService.saveDoctor(doctorDTO.toEntity());
             return ResponseEntity.status(HttpStatus.CREATED).body(DoctorDTO.fromEntity(doctor));
+        } catch (DataIntegrityViolationException e) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body("Error: Data integrity violation. Please check your input.");
         } catch (IllegalArgumentException e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Invalid request: " + e.getMessage());
+                    .body("Invalid request: " + e.getMessage()); 
         }
     }
 
@@ -84,30 +90,40 @@ public class DoctorController {
     @ApiResponses({
         @ApiResponse(responseCode = "200", description = "Doctor updated successfully", 
                      content = @Content(mediaType = "application/json", schema = @Schema(implementation = DoctorDTO.class))),
-        @ApiResponse(responseCode = "404", description = "Doctor not found", content = @Content(mediaType = "application/json"))
+        @ApiResponse(responseCode = "400", description = "Invalid request data", content = @Content),
+        @ApiResponse(responseCode = "404", description = "Doctor not found", content = @Content)
     })
     @PutMapping("/{id}")
-    public ResponseEntity<DoctorDTO> updateDoctor(@PathVariable Long id, @Valid @RequestBody DoctorDTO doctorDTO) {
+    public ResponseEntity<?> updateDoctor(@PathVariable Long id, @Valid @RequestBody DoctorDTO doctorDTO) {
         try {
             Doctor updatedDoctor = doctorService.updateDoctor(id, doctorDTO.toEntity());
             return ResponseEntity.ok(DoctorDTO.fromEntity(updatedDoctor));
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body("Error: Doctor with ID " + id + " not found.");
         } catch (IllegalArgumentException e) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body("Invalid request: " + e.getMessage());
         }
-    }
+    } 
 
     @Operation(summary = "Delete a doctor", description = "Removes a doctor from the system by their ID.")
     @ApiResponses({
         @ApiResponse(responseCode = "200", description = "Doctor successfully deleted", content = @Content),
-        @ApiResponse(responseCode = "404", description = "Doctor not found", content = @Content)
+        @ApiResponse(responseCode = "404", description = "Doctor not found", content = @Content),
+        @ApiResponse(responseCode = "400", description = "Invalid request", content = @Content)
     })
     @DeleteMapping("/{id}")
-    public ResponseEntity<String> deleteDoctor(@PathVariable Long id) {
+    public ResponseEntity<?> deleteDoctor(@PathVariable Long id) {
         try {
             doctorService.deleteDoctor(id);
             return ResponseEntity.ok("Doctor successfully deleted.");
         } catch (EntityNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Doctor not found.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body("Error: Doctor with ID " + id + " not found.");
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body("Invalid request: " + e.getMessage());
         }
-    }
+    }    
 }
